# ticker-pulse-bot-cpp

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
config/: global_config.h
include/: bot.h  crypto_fetcher.h  news_fetcher.h  postgres_connection.h  thread_pool.h  utils.h
include/dao/: news_dao.h
include/db/: postgres_connection.h
include/models/: news_model.h
include/services/: bot.h
include/utils/: common.h  common_utils.h  http_client.h
src/: CMakeLists.txt  bot.cpp  crypto_fetcher.cpp  main.cpp  news_fetcher.cpp  thread_pool.cpp  utils.cpp
src/dao/: news_dao.cpp
src/db/: postgres_connection.cpp
src/models/: news_model.cpp
src/services/: bot.cpp
src/utils/: common.cpp  common_utils.cpp  http_client.cpp  thread_pool.cpp
src/utils/Bot/: Bot.cpp  Bot.h
src/utils/ThreadPool/: ThreadPool.cpp  ThreadPool.h
